tablet: call destroy on the destructor

Somehow it isn't automatically generated in.

BUG: 458793